--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".vim/bundle/vim-arpeggio"]
 	path = .vim/bundle/vim-arpeggio
 	url = https://github.com/kana/vim-arpeggio
+[submodule ".vim/bundle/vimbufsync"]
+	path = .vim/bundle/vimbufsync
+	url = https://github.com/def-lkb/vimbufsync
